# variant_access

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: full_example.rs  smoke.rs  tests.rs
tests/uncompilable_examples/: bad_func_create_variant_from_type.rs  bad_func_create_variant_from_type.stderr  bad_get_variant_type.rs  bad_get_variant_type.stderr  bad_trait_create_variant_from_type.rs  bad_trait_create_variant_from_type.stderr  enum_with_named_subfields.rs  enum_with_named_subfields.stderr  enum_with_tuple_field.rs  enum_with_tuple_field.stderr  get_wrong_variant_generics.rs  get_wrong_variant_generics.stderr  input_not_enum.rs  input_not_enum.stderr  non_static_lifetime_parameter.rs  non_static_lifetime_parameter.stderr  non_static_templates.rs  non_static_templates.stderr  twice_used_field_type.rs  twice_used_field_type.stderr  type_does_not_implement_debug.rs  type_does_not_implement_debug.stderr  type_does_not_implement_partialeq.rs  type_does_not_implement_partialeq.stderr
variant_access_derive/: Cargo.toml
variant_access_derive/src/: lib.rs  parse_enum.rs  templates.rs
variant_access_traits/: Cargo.toml
variant_access_traits/src/: lib.rs
