[package]
name = "variant_access"
version = "0.1.0"
authors = ["Jacob Turner <jacob@friendrat.com> "]
edition = "2018"
readme = "README.md"
description = "A set of traits and macros for defining a common api for Rust enums based on the std::variant api in the C++ standard library"
repository = "https://github.com/FriendRat/variant_access"
homepage = "https://github.com/FriendRat/variant_access"
license = "MIT"
categories = ["development-tools", "rust-patterns"]
build = false

[lib]
proc-macro = true

[net]
retry = 2
git-fetch-with-cli = true

[dependencies]
syn = "1.0"
quote = "1.0"
variant_access_traits = {git = "ssh://git@github.com/FriendRat/variant_access.git", version="0.1.0"}
variant_access_derive = {git = "ssh://git@github.com/FriendRat/variant_access.git", version="0.1.0"}
#variant_access_traits = {git = "https://github.com/FriendRat/variant_access/tree/master/variant_access_traits", version="0.1.0"}
#variant_access_derive = {git = "https://github.com/FriendRat/variant_access/tree/master/variant_access_derive", version="0.1.0"}